Text overflow fix and remove footer

--- a/style.css
+++ b/style.css
@@ -1,17 +1,18 @@
 html, body {
+
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
+    min-height: 100vh; 
     background-color: #F0EEF1;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
 
 body{
-    display: grid;
-    grid-template-rows: 100px 1fr 100px;
+    display: flex;
+    flex-direction: column;
 }
-
 .header{
     background-color: #ffffff;
     height: 100px;
@@ -24,7 +25,8 @@ body{
 
 .main-content{
     display: grid;
-    grid-template-rows: 100px 0px 1fr ;
+    grid-template-rows: 100px 1fr 1fr ;
+    margin-bottom: 100px;
 }
 
 #newBookBtn{
@@ -83,13 +85,14 @@ body{
     display: grid;
     align-items: center;
     gap: 20px;
+
 }
 
 .card > h2, .card > p{
     margin: 0px;
     justify-self: center;
     overflow-wrap: break-word;
-    word-wrap: break-word;
+
 }
 h2{
     font-size: 30px;
@@ -148,7 +151,8 @@ form input{
 }
 
 .footer{
-    justify-self: center;
-    background-color: #F0EEF1;
+    background-color: #74e69a;
+    padding-top: 2rem;
+    text-align: center;
 }
 
